--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,26 @@ services:
       - "3030:3030/udp"
     networks:
       - pulse-net
+    healthcheck:
+      test: ["CMD-SHELL", "exit 0"] 
+      interval: 2s
+      retries: 5
+      start_period: 2s
+
+  test:
+    build:
+      context: ./tests/integration
+      dockerfile: Dockerfile
+    container_name: pulse-integration-tests
+    depends_on:
+      pulse:
+        condition: service_healthy
+    networks:
+      - pulse-net
+    environment:
+      - PULSE_SERVER_HOST=pulse
+      - PULSE_SERVER_PORT=3030
+    command: ["pytest", "."]
 
 
 networks:
