--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "tests/integration/clients"]
 	path = tests/integration/clients
-	url = git@github.com:JeppeSS/pulse-client-python.git
- 
+	url = git@github.com:JeppeSS/Pulse.git
