--- a/tests/integration/Dockerfile
+++ b/tests/integration/Dockerfile
@@ -11,5 +11,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+ENV PYTHONPATH="${PYTHONPATH}:/tests/clients"
 
 CMD ["pytest", "."]
