--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/integration/clients"]
 	path = tests/integration/clients
-	url = git@github.com:JeppeSS/Pulse.git
+    url = https://github.com/JeppeSS/pulse-client-python.git
